--- a/advance/day-04/data/local/sqlc.yaml
+++ b/advance/day-04/data/local/sqlc.yaml
@@ -12,6 +12,7 @@ sql:
       go:
         package: "db"
         out: "internal/db"
+        emit_interface: true
 overrides:
   go: null
 plugins: []
